// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemList > snapshots > should render empty list 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          0
           total
        </div>
      </div>
    </div>
    <div
      class="list__tableWrap"
    >
      <table
        class="list__table"
      >
        <thead>
          <tr>
            <th
              class="list__th list__th--name"
              scope="col"
            >
              Name
            </th>
            <th
              class="list__th"
              scope="col"
            >
              Summary
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="list__td"
              colspan="2"
            >
              <p
                class="list__empty"
              >
                No items
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render list with items 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          3
           total
        </div>
      </div>
    </div>
    <div
      class="list__tableWrap"
    >
      <table
        class="list__table"
      >
        <thead>
          <tr>
            <th
              class="list__th list__th--name"
              scope="col"
            >
              Name
            </th>
            <th
              class="list__th"
              scope="col"
            >
              Summary
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-label="Select Item 1"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 1
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 1
            </td>
          </tr>
          <tr
            aria-label="Select Item 2"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 2
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 2
            </td>
          </tr>
          <tr
            aria-label="Select Item 3"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 3
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render with add button 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          3
           total
        </div>
        <button
          class="list__addButton"
          type="button"
        >
          + Add Item
        </button>
      </div>
    </div>
    <div
      class="list__tableWrap"
    >
      <table
        class="list__table"
      >
        <thead>
          <tr>
            <th
              class="list__th list__th--name"
              scope="col"
            >
              Name
            </th>
            <th
              class="list__th"
              scope="col"
            >
              Summary
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-label="Select Item 1"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 1
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 1
            </td>
          </tr>
          <tr
            aria-label="Select Item 2"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 2
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 2
            </td>
          </tr>
          <tr
            aria-label="Select Item 3"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 3
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render with pagination on multiple pages 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          50
           total
        </div>
      </div>
    </div>
    <div
      class="list__tableWrap"
    >
      <table
        class="list__table"
      >
        <thead>
          <tr>
            <th
              class="list__th list__th--name"
              scope="col"
            >
              Name
            </th>
            <th
              class="list__th"
              scope="col"
            >
              Summary
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-label="Select Item 26"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 26
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 26
            </td>
          </tr>
          <tr
            aria-label="Select Item 27"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 27
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 27
            </td>
          </tr>
          <tr
            aria-label="Select Item 28"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 28
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 28
            </td>
          </tr>
          <tr
            aria-label="Select Item 29"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 29
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 29
            </td>
          </tr>
          <tr
            aria-label="Select Item 30"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 30
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 30
            </td>
          </tr>
          <tr
            aria-label="Select Item 31"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 31
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 31
            </td>
          </tr>
          <tr
            aria-label="Select Item 32"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 32
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 32
            </td>
          </tr>
          <tr
            aria-label="Select Item 33"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 33
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 33
            </td>
          </tr>
          <tr
            aria-label="Select Item 34"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 34
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 34
            </td>
          </tr>
          <tr
            aria-label="Select Item 35"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 35
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 35
            </td>
          </tr>
          <tr
            aria-label="Select Item 36"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 36
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 36
            </td>
          </tr>
          <tr
            aria-label="Select Item 37"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 37
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 37
            </td>
          </tr>
          <tr
            aria-label="Select Item 38"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 38
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 38
            </td>
          </tr>
          <tr
            aria-label="Select Item 39"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 39
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 39
            </td>
          </tr>
          <tr
            aria-label="Select Item 40"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 40
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 40
            </td>
          </tr>
          <tr
            aria-label="Select Item 41"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 41
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 41
            </td>
          </tr>
          <tr
            aria-label="Select Item 42"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 42
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 42
            </td>
          </tr>
          <tr
            aria-label="Select Item 43"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 43
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 43
            </td>
          </tr>
          <tr
            aria-label="Select Item 44"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 44
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 44
            </td>
          </tr>
          <tr
            aria-label="Select Item 45"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 45
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 45
            </td>
          </tr>
          <tr
            aria-label="Select Item 46"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 46
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 46
            </td>
          </tr>
          <tr
            aria-label="Select Item 47"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 47
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 47
            </td>
          </tr>
          <tr
            aria-label="Select Item 48"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 48
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 48
            </td>
          </tr>
          <tr
            aria-label="Select Item 49"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 49
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 49
            </td>
          </tr>
          <tr
            aria-label="Select Item 50"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 50
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 50
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        2
         of 
        2
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render with selected item 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          3
           total
        </div>
      </div>
    </div>
    <div
      class="list__tableWrap"
    >
      <table
        class="list__table"
      >
        <thead>
          <tr>
            <th
              class="list__th list__th--name"
              scope="col"
            >
              Name
            </th>
            <th
              class="list__th"
              scope="col"
            >
              Summary
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-label="Select Item 1"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 1
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 1
            </td>
          </tr>
          <tr
            aria-label="Select Item 2"
            class="list__tr list__tr--clickable list__tr--active"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 2
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 2
            </td>
          </tr>
          <tr
            aria-label="Select Item 3"
            class="list__tr list__tr--clickable"
            role="button"
            tabindex="0"
          >
            <td
              class="list__td list__td--name"
            >
              Item 3
            </td>
            <td
              class="list__td list__td--summary"
            >
              Summary 3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;
